--- a/style.scss
+++ b/style.scss
@@ -2,6 +2,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    background-image: url();
 }
 
 .wrap {
@@ -101,6 +102,14 @@
                 .valItem {
                     font-size: 24px;
                 }
+
+            }
+
+            #flagCountry {
+                width: 65px;
+                height: 60px;
+                background-position: center;
+                background-size: cover;
             }
 
             .valItem {
