--- a/style.scss
+++ b/style.scss
@@ -69,7 +69,7 @@
     .infoContainer {
         display: flex;
         width: 500px;
-        height: 400px;
+        min-height: 400px;
         background-color: green;
         border-radius: 20px;
         background: rgba(255, 255, 255, 0.2);
@@ -80,7 +80,33 @@
         align-items: center;
         color: #fff;
         transition: 1s;
-        padding: 40px 0;
+        padding: 40px 15px;
+
+        .AdviceContainer {
+            width: 100%;
+            display: flex;
+            justify-content: space-evenly;
+            align-items: center;
+
+            .adviceBlock {
+                margin: 0 0 0 5px;
+                font-size: 18px;
+                width: 65%;
+                display: flex;
+                justify-content: flex-end;
+                align-items: center;
+            }
+
+            .nameItem {
+                width: 35%;
+                margin-bottom: 5px;
+                font-size: 15px;
+                display: flex;
+                justify-content: flex-end;
+                align-items: center;
+                padding-right: 10px;
+            }
+        }
 
         .infoItem {
             width: 100%;
@@ -96,13 +122,23 @@
 
                 .nameItem {
                     margin-bottom: 5px;
-                    font-size: 14px;
+                    font-size: 15px;
                 }
 
                 .valItem {
                     font-size: 24px;
                 }
 
+            }
+
+            .countryCobtainer {
+                display: flex;
+                justify-content: space-evenly;
+                align-items: center;
+
+                div {
+                    margin: 5px;
+                }
             }
 
             #flagCountry {
@@ -125,6 +161,14 @@
                 justify-content: center;
                 align-items: center;
             }
+        }
+
+        hr {
+            width: 100%;
+            height: 2px;
+            margin: 10px 0;
+            border: 1px solid #fff;
+            opacity: 0.3;
         }
     }
 }
