add hover effect on input city

--- a/style.scss
+++ b/style.scss
@@ -33,6 +33,21 @@
             height: 100px;
         }
 
+        p {
+            width: 100%;
+            height: 40px;
+            position: relative;
+            top: 58px;
+            font-weight: 300;
+            transition: 0.5s;
+            font-size: 14px;
+            align-self: flex-start;
+            color: #fff;
+            display: flex;
+            align-items: flex-end;
+            padding-bottom: 10px;
+        }
+
         #city {
             border: none;
             border-bottom: 1px solid #e1e1e1;
@@ -173,7 +188,7 @@
     }
 }
 
-@media screen and (max-width: 850px){
+@media screen and (max-width: 850px) {
     .wrap {
         .infoContainer {
             width: 300px;
@@ -181,7 +196,7 @@
     }
 }
 
-@media screen and (max-width: 650px){
+@media screen and (max-width: 650px) {
     .wrap {
         padding: 50px;
         flex-direction: column;
