--- a/style.css
+++ b/style.css
@@ -32,6 +32,20 @@
 .wrap .inputContainer img {
   height: 100px;
 }
+.wrap .inputContainer p {
+  width: 100%;
+  height: 40px;
+  position: relative;
+  top: 58px;
+  font-weight: 300;
+  transition: 0.5s;
+  font-size: 14px;
+  align-self: flex-start;
+  color: #fff;
+  display: flex;
+  align-items: flex-end;
+  padding-bottom: 10px;
+}
 .wrap .inputContainer #city {
   border: none;
   border-bottom: 1px solid #e1e1e1;
